objects/CSLT_Integration_Process_Log__c.object
<CustomObject>
    <description>Tracks opportunities sent to Castlight.</description>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpportunityId</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Castlight Integration Process Logs</relationshipLabel>
        <relationshipName>Castlight_Integration_Process_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Date_Time__c</fullName>
        <description>Last date &amp; time when record sent to Castlight</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of data sent to Castlight</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Castlight Integration Process Log</label>
    <nameField>
        <displayFormat>CSLTLog-{0000000}</displayFormat>
        <label>CSLT Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Castlight Integration Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>